tests/integration/snapshots/integration__test_json__object_missing_colon_with_null.snap
---
source: tests/integration/test_json.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
{"hi" null 
stdout --- 
<empty>
stderr --- 
error: expected colon after key, found `null`
 --> stdin:1:7
  |
1 | {"hi" null 
  |  ---- ^^^^
  |  |
  |  expected due to `"hi"`
  |
help: insert the missing colon
  |
1 | {"hi":  null 
  |      +
