tests/integration/snapshots/integration__test_json__object_missing_comma_between_values.snap
---
source: tests/integration/test_json.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
{"hi": null null
stdout --- 
<empty>
stderr --- 
error: expected comma or closed curly brace, found `null`
 --> stdin:1:13
  |
1 | {"hi": null null
  | -    ------ ^^^^
  | |    |
  | |    expected due to the preceding key/value pair
  | object opened here by `{`
