tests/integration/snapshots/integration__test_json__object_missing_comma_or_closing_with_whitespace.snap
---
source: tests/integration/test_json.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
{"hi": null     
stdout --- 
<empty>
stderr --- 
error: expected comma or closed curly brace, found no significant characters
 --> stdin:1:11
  |
1 | {"hi": null     
  | -    -----^
  | |    |
  | |    expected due to the preceding key/value pair
  | object opened here by `{`
  |
help: insert the missing closed brace
  |
1 | {"hi": null}     
  |            +
